--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
     <head>
         <title>Eid-Zakat</title>
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
-        <main>
-            <h1>welcome to eid-zakat</h1>
-        </main>
+        <section class="banner">
+            <div class="info">
+                <div class="hero-text">
+                    <h1>Let’s Finish your <br> internal Evil</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut nobis repellat alias iste quis, ex maxime adipisci dolor facere ullam.</p>
+                    <a href="#">Donate</a>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
