hero area p tag and button updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
                 <div class="hero-text">
                     <h1>Let’s Finish your <br> internal Evil</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut nobis repellat alias iste quis, ex maxime adipisci dolor facere ullam.</p>
-                    <a href="#">Donate</a>
+                    <a href="#">Donate Now</a>
                 </div>
             </div>
         </section>
