hero section updated

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
                 </div>
             </div>
         </section>
+        <main>
+            <article>
+                <div class="main"></div>
+            </article>
+        </main>
     </body>
 </html>
